[project]
name = "x402-agent"
version = "0.1.2"
description = "Framework-agnostic payer for the x402 HTTP payment protocol. Works with LangChain, CrewAI, AutoGen, LangGraph, or any other agent framework."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Xenarch", email = "hello@xenarch.dev"},
]
keywords = [
    "x402", "http-402", "ai-agents", "langchain", "crewai",
    "autogen", "langgraph", "micropayments", "usdc", "base",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "x402[evm]>=2.8,<3",
    "eth-account>=0.11",
]

[project.optional-dependencies]
pay-json = ["pay.json>=1.1,<2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/xenarch-ai/x402-agent"
Repository = "https://github.com/xenarch-ai/x402-agent"
Issues = "https://github.com/xenarch-ai/x402-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x402_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
files = ["x402_agent"]
strict = true

[[tool.mypy.overrides]]
module = ["x402.*", "pay_json.*"]
ignore_missing_imports = true
